# pam_wrapper

./: .travis.yml  AUTHORS  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ChangeLog  ConfigureChecks.cmake  README  README.install  config.h.cmake  libpamtest-config.cmake.in  libpamtest.pc.cmake  pam_wrapper-config.cmake.in  pam_wrapper.pc.cmake
cmake/Modules/: DefineCompilerFlags.cmake  FindPythonLibs.cmake  FindPythonSiteLibs.cmake
doc/: CMakeLists.txt  Doxyfile.in  README  pam_get_items.8  pam_get_items.8.txt  pam_get_items.txt  pam_matrix.8  pam_matrix.8.txt  pam_matrix.txt  pam_set_items.8  pam_set_items.8.txt  pam_set_items.txt  pam_wrapper.1  pam_wrapper.1.txt
include/: CMakeLists.txt  libpamtest.h  pwrap_compat.h
rpm/: pam_wrapper.spec
src/: CMakeLists.txt  libpamtest.c  pam_wrapper.c
src/modules/: CMakeLists.txt  pam_get_items.c  pam_matrix.c  pam_set_items.c
src/python/: CMakeLists.txt  pypamtest.c
tests/: CMakeLists.txt  pam_example.c  pam_matrix.c  passdb  passdb_py  passdb_ro  pypamtest_test.py  test_pam_wrapper.c
tests/services/: matrix.in  matrix_opt.in  matrix_py.in  pwrap_get_set.in  pwrap_pam.in  pwrap_pam_opt.in
